# streamlit_portfolio

./: .gitignore  README.md  backtest.ipynb  backtest_results_strict_criteria.xlsx  lseg_data_retrieve.ipynb  main.py  pyproject.toml  stock_screening_results_by_year_old_assumption.xlsx  stock_screening_results_comparison.xlsx  thai_dividend_app.py
